added details layout display

--- a/src/pages/ConfigureDetails.css
+++ b/src/pages/ConfigureDetails.css
@@ -149,3 +149,14 @@
 .modal-button.cancel:hover {
   background-color: #5a6268;
 }
+
+.nested-fields {
+  padding-left: 1rem;
+  margin-top: 0.5rem;
+}
+
+.nested-field {
+  margin: 0.25rem 0;
+  padding-left: 0.5rem;
+  border-left: 2px solid #eee;
+}
