--- a/src/pages/ConfigureCarousels.css
+++ b/src/pages/ConfigureCarousels.css
@@ -41,6 +41,7 @@
 
 .carousel-title-label {
   text-align: left;
+  width: 50%;
 }
 
 .rectangles-row {
@@ -62,6 +63,7 @@
 }
 
 .carousel-title-label h2 {
+  width: 50%;
   cursor: pointer;
   padding: 5px;
   border-radius: 4px;
@@ -138,4 +140,55 @@
 .publish-button:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+.add-item-button {
+  padding: 10px 20px;
+  background-color: #6610f2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+  position: fixed;
+  right: 20px;
+  top: 150px;
+}
+
+.remove-button {
+  text-align: left;;
+  padding: 10px 20px;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+  float: left;
+  margin-right: 10px;
+}
+
+.add-item-button:hover {
+  background-color: #520dc2;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
